fix timezone icon alignment style

--- a/packages/components/src/DateTimePickers/Time/Input/Input.scss
+++ b/packages/components/src/DateTimePickers/Time/Input/Input.scss
@@ -1,6 +1,6 @@
 .time-picker-input {
 	display: flex;
-	align-items: flex-end;
+	align-items: center;
 
 	:global(.form-control) {
 		margin-right: $padding-small;
@@ -9,6 +9,5 @@
 	svg {
 		width: 1.4rem;
 		height: 1.4rem;
-		margin-bottom: 0.2rem;
 	}
 }
